Configuramos todo el proyecto con nuestro entorno, verificacion de logica.
